# tank-royale-gym

./: .dockerignore  .gitignore  TODO.md  check_env.py  docker-compose.yaml  easy_run.py  main.py  pyproject.toml  pyproject.toml.foo  requirements.txt  setup.py  testing.ipynb
envs/: __init__.py  base.py  docker_env.py
k8s/: job.yaml
k8s/example/: ing.yaml  pvc.yaml  rbac.yaml
lib/bot_api/: README.md  bot.py  bots.py  util.py
lib/dependency_managers/: docker_manager.py  k8s_manager.py  robocode_manager.py
lib/render/: basic_rgb.py  render.ipynb
notebooks/: kfp_util.py  setup.py
notebooks/robotorch/: agent.py  play.py  train.py
notebooks/server/: handle.py
src/envs/: down_sample_env.py.old
tank-royal-gym/envs/: __init__.py  base.py  base_env.py  booter_env.py  booter_env_lite.py  docker_env.py  half_size_env.py  kubernetes_env.py  sample_bot_env.py
tank-royal-gym/lib/bot_api/: base_bot.py  bots.py  constants.py  util.py
tank-royal-gym/lib/dependency_managers/: docker_manager.py  k8s_manager.py
tank-royal-gym/test/: test_gym.py  test_managers.py
tank_royal_gym/envs/: __init__.py  base_env.py  booter_env_lite.py  docker_env.py
tank_royal_gym/lib/bot_api/: base_bot.py  bots.py
tank_royal_gym/lib/dependency_managers/: docker_manager.py  (+1 more)
test/: main.py  test_gym.py  test_managers.py
train/: .dockerignore  Dockerfile  README.md  get_video.py  metrics.py  net.py  notebook.Dockerfile  play.py  ray-train.py  ray.Dockerfile  requirements.txt  run.py  sb3.py  train.ipynb  train.py  wrappers.py
trained_agent/: Dockerfile  main.py  requirements.txt
(+3 files in other folders)
